# sigma

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  devspace.yaml  werf-giterminism.yaml  werf.yaml
apps/sigma/: Cargo.toml  Makefile.toml
apps/sigma-controller/: Cargo.toml
apps/sigma-controller/src/: main.rs
apps/sigma-server/: Cargo.toml
apps/sigma-server/src/: main.rs
apps/sigma/.cargo/: config.toml
apps/sigma/assets/: index.html
docs/: README.md
libs/sigma-core/: Cargo.toml
libs/sigma-protocol/: Cargo.toml
manifests/base/: kustomization.yaml
manifests/base/apps/: kustomization.yaml
manifests/base/apps/sigma-controller/: deployment.yaml
manifests/base/apps/sigma-server/: deployment.yaml  kustomization.yaml  role-binding.yaml  role.yaml  rtc-endpoints.yaml  rtc-service.yaml  service-account.yaml  service.yaml
manifests/base/apps/sigma-web-server/: deployment.yaml  service.yaml
manifests/base/infrastructure/: kustomization.yaml
scripts/devspace/: image-config.sh
