[package]
name = "sigma-controller"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
futures = "0.3"
k8s-openapi = { version = "0.14", features = ["v1_22"] }
kube = { version = "0.70", features = ["runtime", "derive", "ws"] }
sigma-core = { path = "../../libs/sigma-core" }
tokio = { version = "1.17", features = ["full"] }
